@@ -182,6 +182,7 @@ INSERT INTO command (access, name, description, cmdgroup) VALUES
 (20,	'voteban', 'vote to ban', 'moderation'),
 (20,	'votecancel', 'cancel a vote', 'moderation'),
 (15,	'votekick', 'vote to kick', 'moderation'),
+(35,	'whisperback', 'Toggle whisperback on/off', 'useful'),
 (1,		'whoami', NULL, 'accounts'),
 (1,		'whois', NULL, 'accounts');
 
